fixed the stretching on event card image

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -56,3 +56,17 @@
     cursor: pointer;
   }
 }
+
+.no-image-avatar-itinerary {
+  border: solid 1px $darkest-teal;
+  background-color: $darkest-teal;
+  height: 56px;
+  width: 56px;
+  border-radius: 50%;
+  text-align: center;
+  p {
+    color: $almost-white;
+    font-size: 24px;
+    margin: 0;
+  }
+}
